fixed wrapping in website-list page

--- a/public/assignment/css/styles.css
+++ b/public/assignment/css/styles.css
@@ -17,7 +17,7 @@ body {
     margin-right: 5px;
 }
 .list-btn {
-    padding: 0px;
+    padding: 0;
 }
 .data-list-padding {
     padding: 8px;
